--- a/package.json
+++ b/package.json
@@ -10,8 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-vector-icons/material-design-icons": "^12.0.0",
+    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/stack": "^7.3.2",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@shopify/flash-list": "^1.8.0",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-hook-form": "^7.56.4",
+    "react-native": "0.79.2",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-paper": "^5.14.3",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-toast-message": "^2.3.0",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
